--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,105 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
+
+1.  Loading the data
+
+```{r}
+activity <- unzip("activity.zip")
+act_data <- read.csv("activity.csv", header=TRUE, sep=",")
+str(act_data)
+```
+
+Process the data
+
+```{r}
+act_data$date <- as.Date(act_data$date, format="%Y-%m-%d")
+act_data$interval <- as.factor(act_data$interval)
+str(act_data)
+```
+
+2.Histogram of the total number of steps taken each day
+
+```{r}
+steps_per_day <- aggregate(steps ~ date, data=act_data, FUN=sum)
+ggplot(steps_per_day, aes(x = steps)) + 
+  geom_histogram(fill = "blue", binwidth = 1000) + 
+  labs(title = "Histogram - Steps Taken Per Day", x = "Steps Per Day", y = "Frequency")
+```
+
+3.  Mean and median number of steps taken each day
+
+```{r}
+mean_steps_per_day <- mean(steps_per_day$steps)
+mean_steps_per_day
+median_steps_per_day <- median(steps_per_day$steps)
+median_steps_per_day
+```
+
+4.  Time series plot of the average number of steps taken
+
+```{r}
+steps_per_interval <- aggregate(steps ~ interval, data = act_data, FUN = mean, na.rm = TRUE)
+steps_per_interval$interval <- as.integer(levels(steps_per_interval$interval)[steps_per_interval$interval])
+colnames(steps_per_interval) <- c("interval", "steps")
+ggplot(steps_per_interval, aes(x = interval, y = steps)) + 
+  geom_line(col = "blue", size = 1) + 
+  labs(title = "Average Daily Activity Pattern", x = "Interval", y = "Steps")
+```
 
 
-## Loading and preprocessing the data
+5.  The 5-minute interval that, on average, contains the maximum number of steps
+
+```{r}
+max_interval <- steps_per_interval[which.max(steps_per_interval$steps),]
+max_interval
+```
+
+
+6.  Code to describe and show a strategy for imputing missing data
+```{r}
+missing_values <- sum(is.na(act_data$steps))
+missing_values
+```
+```{r}
+new_act_data <- act_data
+index_of_na <- which(is.na(new_act_data$steps))
+for (i in index_of_na) {
+  new_act_data$steps[i] <- with(steps_per_interval, steps[interval = new_act_data$interval[i]])
+}
+new_missing_values <- sum(is.na(new_act_data$steps))
+new_missing_values
+```
 
 
 
-## What is mean total number of steps taken per day?
+7.  Histogram of the total number of steps taken each day after missing values are imputed
+
+```{r}
+new_steps_per_day <- aggregate(steps ~ date, data = new_act_data, FUN=sum)
+colnames(new_steps_per_day) <- c("date", "steps")
+ggplot(new_steps_per_day, aes(x = steps)) + 
+  geom_histogram(fill = "blue", binwidth = 1000) + 
+  labs(title = "Histogram - Steps Taken Per Day", x = "Steps Per Day", y = "Frequency")
+
+new_mean_steps_per_day <- mean(new_steps_per_day$steps)
+new_mean_steps_per_day
+new_median_steps_per_day <- median(new_steps_per_day$steps)
+new_median_steps_per_day
+```
 
 
-
-## What is the average daily activity pattern?
-
+8.  Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
 
 
-## Imputing missing values
+```{r}
+dt <- data.table(new_act_data)
+dt[, weekday := ifelse(weekdays(date) %in% c("Saturday", "Sunday"), "Weekend", "Weekday")]
+dt$weekday <- as.factor(dt$weekday)
+dt$interval <- as.integer(levels(dt$interval)[dt$interval])
+head(dt, 10)
 
+steps_per_weekday <- aggregate(steps ~ interval+weekday, data = dt, FUN = mean)
+ggplot(steps_per_weekday, aes(x = interval, y = steps)) + 
+  geom_line(col = "blue", size = 1) + 
+  facet_wrap(~ weekday, nrow=2, ncol=1) + 
+  labs(x = "Interval", y = "Number of Steps")
 
-
-## Are there differences in activity patterns between weekdays and weekends?
+```
